# netbox-provisioner

./: .gitignore  Cargo.toml  build.sh  graphql.config.yml
backend/: Cargo.toml
backend/examples/: test_topology_load.rs
backend/src/: config.rs  context.rs  device.rs  graphql.rs  lib.rs
backend/src/device/: mod.rs  ros.rs
backend/src/device/ros/: graphql.rs  hw_facts.rs  mod.rs  test.rs
backend/src/device/ros/l2/: mod.rs  test.rs
backend/src/graphql/: mod.rs  scalars.rs
backend/src/netbox/: fetch_topology.graphql  list-devices.graphql  mod.rs  schema.graphqls
backend/src/topology/: fetch.rs  graphql.rs  mod.rs  test.rs
backend/src/topology/access/: cable.rs  connections.rs  device.rs  front_port.rs  graphql.rs  interface.rs  ip_addresses.rs  ip_prefix.rs  ip_ranges.rs  mod.rs  rear_port.rs  vlan.rs  vxlan.rs  wlan.rs  wlan_group.rs
binary/: Cargo.toml  build.rs
binary/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  local.css
frontend/src/: data.rs  error.rs  main.rs
frontend/src/components/: adjust_target.rs  mod.rs
frontend/src/graphql/: mod.rs
frontend/src/graphql/anonymous/: graphql.config.yml  mod.rs  settings.graphql
frontend/src/graphql/authenticated/: adjust-target.graphql  list-devices.graphql  mod.rs  show-device.graphql
frontend/src/pages/: devices.rs  mod.rs  routes.rs
frontend/src/pages/devices/: mod.rs  show.rs
