[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.15"
graphql_client = { version = "0.15.0", features = ["reqwest-rustls"], git = "https://github.com/Chrisss93/graphql-client", branch = "reqwest-upgrade" }
lazy_static = "1.5.0"
serde = "1.0.218"
config = "0.15.8"
reqwest = "0.12.15"
thiserror = "2.0.12"