[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.16"
graphql_client = { version = "0.15.0", features = ["reqwest-rustls"], git = "https://github.com/Chrisss93/graphql-client", branch = "reqwest-upgrade" }
lazy_static = "1.5.0"
serde = "1.0.219"
config = "0.15.11"
reqwest = "0.12.15"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync"] }
log = "0.4.26"
ipnet = "2.11.0"
regex = "1.11.1"
surge-ping = "0.8.2"
mikrotik-api = { version = "0.1.0", git = "https://github.com/koa/mikrotik-api" }
mikrotik-model = { version = "0.1.0", git = "https://github.com/koa/mikrotik-model" }
#mikrotik-api = { version = "0.1.0", path = "../../mikrotik-api" }
#mikrotik-model = { version = "0.1.0", path = "../../mikrotik-model" }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
env_logger = "0.11.7"
