[package]
name = "binary"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-static-files = "4"
backend = { path = "../backend" }
async-graphql = "7.0.15"
async-graphql-actix-web = "7.0.15"
env_logger = "0.11.6"
log = "0.4"
prometheus = "0.13.4"
actix-web-prometheus = { version = "0.1.2", features = ["process"] }
thiserror = "2.0.11"
actix-4-jwt-auth = { version = "1.2.5" }
tracing-actix-web = "0.7"
tracing = { version = "0.1", features = ["log"] }
serde = "1.0.218"
serde_json = "1.0.139"
futures-util = "0.3.31"
include_dir = "0.7.4"
mime-db = "1.8.0"

[build-dependencies]