[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
yew = { version = "0.21.0", features = ["csr"] }
yew-nested-router = { version = "0.7.2" }
patternfly-yew = { version = "0.6.3" }
graphql_client = { version = "0.15.0", features = ["reqwest-rustls"], git = "https://github.com/Chrisss93/graphql-client", branch = "reqwest-upgrade" }
reqwest = { version = "0.12.12", feature = ["rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
log = "0.4"
wasm-logger = "0.2.0"
web-sys = "0.3.77"
thiserror = "2.0.11"
google-signin-client = { version = "0.2.0-SNAPSHOT", git="https://git.panter.ch/open-source/google-signin-client.git" }
jwt = "0.16.0"
wasm-timer = "0.2.5"
lazy_static = "1.5.0"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"

[build-dependencies]
backend = { path = "../backend" }
anyhow = "1.0.96"